<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TabItem
                android:id="@+id/da_tabItem1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/info_outline"
                android:text="@string/da_tab_info" />

            <android.support.design.widget.TabItem
                android:id="@+id/da_tabItem2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/photos"
                android:text="@string/da_tab_photos" />

            <android.support.design.widget.TabItem
                android:id="@+id/da_tabItem3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/maps"
                android:text="@string/da_tab_map" />

            <android.support.design.widget.TabItem
                android:id="@+id/da_tabItem4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/review"
                android:text="@string/da_tab_reviews" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/da_vp_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</android.support.design.widget.CoordinatorLayout>